# disperse-test-4

./: README.md  TODO.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md  main-documentation.md
examples/: build-for-docs.sh  example.py
src/disperse/: data.py  fiorillointegrals.py  mathematica.py  residuals.py  rootfinding.py  saferscipy.py
tests/: test_rootfinding.py
